# File-Viewer

./: CMakeLists.txt  main.cpp
headers/: File.h
src/: File.cpp  main.cpp
